# python-template

./: .editorconfig  .gitignore  LICENSE  README.md  README.rst  cookiecutter.json  logo.py
.github/workflows/: tests.yml
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: bump.py  compress.py  crlf2lf.py  pre_gen_template.py  requirements.txt  update.py  update_dependency.py
tests/: test_template.py
{{ cookiecutter.__clone_name }}/: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  README.rst  conftest.py  docker-compose.yml  mkdocs.yml  pyproject.toml
{{ cookiecutter.__clone_name }}/.github/actions/setup-project/: action.yml
{{ cookiecutter.__clone_name }}/.github/workflows/: docs.yml  lint.yml  publish.yml  tests.yml
{{ cookiecutter.__clone_name }}/docs/: conf.py  developer_interface.md  index.rst  references.rst
{{ cookiecutter.__clone_name }}/tests/: conftest.py  test_cli.py  test_core.py
{{ cookiecutter.__clone_name }}/{{ cookiecutter.__project_slug }}/: __init__.py  __main__.py  cli.py  core.py  info.py  py.typed
{{ cookiecutter.__pypi_name }}/: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.rst  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-lint.txt  requirements.txt
{{ cookiecutter.__pypi_name }}/.github/workflows/: publish.yml  tests.yml
{{ cookiecutter.__pypi_name }}/docs/: conf.py  references.rst
{{ cookiecutter.__pypi_name }}/tests/: conftest.py  test_cli.py  test_core.py
{{ cookiecutter.__pypi_name }}/{{ cookiecutter.__project_slug }}/: __init__.py  __main__.py  cli.py  core.py  info.py
{{cookiecutter.__project_name}}/: .editorconfig  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  README.rst  docker-compose.yml  pyproject.toml  requirements-dev.txt
{{cookiecutter.__project_name}}/.github/workflows/: publish.yml  tests.yml
{{cookiecutter.__project_name}}/{{cookiecutter.__project_name}}/: cli.py  core.py  info.py
