[build-system]
requires = [
    "setuptools>=67.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.isort]
src_paths = ["{{cookiecutter.__project_slug}}"]
skip = ["venv", ".git", ".mypy_cache", ".tox"]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py36']

[tool.mypy]
python_version = 3.6
exclude = ["venv", ".git", ".mypy_cache", ".tox"]


# Disallow dynamic typing
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_subclassing_any = true

# Disallow untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and optional handling
no_implicit_optional = true

# Configuring warnings
warn_unused_ignores = false
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true

# Misc things
strict_equality = true

# Config file
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["lxml"]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = lint,py,docs
isolated_build = true


[testenv]
deps = -r requirements-dev.txt
commands =
    pytest

[testenv:docs]
deps = -r requirements-dev.txt
commands =
    pytest

[testenv:lint]
deps = -r requirements-dev.txt
commands =
    isort -c --diff .
    black --diff .
    bandit -v -r . -c pyproject.toml
    mypy .
    pylint --fail-under=9.0 --rcfile=pyproject.toml .


"""


[tool.pylint.main]
jobs = 0
py-version = "3.6"


[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "protected-access",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name",
    "broad-except",
    "no-member"
]

[tool.bandit]
exclude_dirs = ["venv",]
